# marky

./: .gitignore  README.md  barebones-markdown-viewer-idea.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: window_close.rs
