[package]
name = "barebones-markdown-viewer"
version = "0.1.0"
description = "A tiny Windows-first markdown viewer."
authors = ["mrsam"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "barebones-markdown-viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "barebones_markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ammonia = "4.1.2"
open = "5.3.2"
pulldown-cmark = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy", "html"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
